syntax = "proto3";
package pb;
option optimize_for = LITE_RUNTIME;

message SessionInfo {
    uint64 dnId = 1;//DecentralizerId
    string pId = 2;//peerId

    uint64 sessionId = 3;
    uint64 type = 4;
    string name = 5;
    uint32 address = 6;
    uint32 port = 7;
    map<string, string> details = 8;
}

//DN messages
message DNSessionResponse {
    repeated SessionInfo results = 1;
}

message DNSessionRequest {
    uint64 type = 1;
}

//RPC messages
//Create/update
message RPCUpsertSessionRequest {
    SessionInfo info = 1;
}

message RPCUpsertSessionResponse {
    bool result = 1;
    uint64 sessionId = 2;
}

//Delete
message RPCDeleteSessionRequest {
    uint64 sessionId = 1;
}

message RPCDeleteSessionResponse {
    bool result = 1;
}

//Fetch session ids
message RPCSessionIdsRequest {
    uint64 type = 1;
    string key = 2;
    string value = 3;
}

message RPCSessionIdsResponse {
    repeated uint64 sessionIds = 1;//Available sessions
}

//Fetch an individual session
message RPCGetSessionRequest {
    uint64 sessionId = 1;
}

message RPCGetSessionResponse {
    bool found = 1;
    SessionInfo result = 2;
}